--- a/product.html
+++ b/product.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <title>Product Page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles.css">
@@ -323,5 +324,6 @@
 
 
 </body>
+
 
 </html>
