--- a/cart.html
+++ b/cart.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <title>Cart Page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles.css">
@@ -185,5 +186,6 @@
     </footer>
 
 </body>
+
 
 </html>
